Fix #112: Set modal-body overflow auto, and also tab bar to prevent over floating content

--- a/src/mw-modal/styles/_mw_modal.scss
+++ b/src/mw-modal/styles/_mw_modal.scss
@@ -92,9 +92,11 @@
     }
 
     .modal-body {
-      .mw-tabs {
+      overflow: auto;
+
+      *[mw-tabs] {
         .tab-content {
-          padding: 20px 30px;
+          overflow: auto;
         }
       }
     }
